<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="PERIOD_YEAR_AGO">%s years ago</string>
    <string name="PERIOD_LAST_YEAR">Last year</string>
    <string name="PERIOD_MONTH_AGO">%s months ago</string>
    <string name="PERIOD_LAST_MONTH">Last month</string>
    <string name="PERIOD_WEEK_AGO">%s weeks ago</string>
    <string name="PERIOD_LAST_WEEK">Last week</string>
    <string name="PERIOD_DAY_AGO">%s days ago</string>
    <string name="PERIOD_YESTERDAY">Yesterday</string>
    <string name="PERIOD_HOURS_AGO">%s hours ago</string>
    <string name="PERIOD_MINUTE_AGO">%s minutes ago</string>
    <string name="PERIOD_JUST_NOW">Just now</string>
    <string name="PERIOD_UNKNOWN">Unknown time</string>
    <string name="SOURCE_UNKNOWN">Unknown source</string>
    <string name="app_name">Feeds Drive</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="subscribe">Subscribe</string>
    <string name="share">Share</string>
    <string name="offline">Offline</string>
	<string name="download_all">Download All</string>
	<string name="cancel_current_download">Cancel downloading</string>
	<string name="show_original_page">Web view</string>
    <string name="url">URL</string>
    <string name="category">Category</string>
    <string name="encoding">Encoding</string>
    <string name="language">Language</string>
	<string name="delete">Delete</string>
	<string name="delete_subscription">Delete the subscription</string>
	<string name="create">Create</string>
    <string name="search_subscription">Search feeds</string>
    <string name="manage_subscription">Manage subscriptions</string>
    <string name="title_tag_selector">Select category</string>
    <string name="SEARCH_FAILED" formatted="false">Failed search query %s: %s</string>
    <string name="add_new_category">Add new Category...</string>
    <string name="select_at_least_one_category">Please select at least one category</string>
	<string name="category_already_exist_so_check_it">Category already exist, so it is checked</string>
	<string name="category_name_must_not_empty">Category name must not empty</string>
    <string name="manage_subscriptions">All subscriptions</string>
    <string name="title_activity_manage_subscription">ManageSubscriptionActivity</string>
	<string name="title_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="help">Help</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="no_article_is_displaying">No article is displaying</string>

	<string name="background_service">Background service</string>
	<string name="downloader">Downloader</string>
	<string name="enable_service">Enable background service</string>
	<string name="charge_condition">Download start only while charging</string>
	<string name="charge_condition_sum">Service run only if devices is charging</string>
	<string name="enable_service_summ">Service start only while charging</string>
	<string name="network_condition">Network condition</string>
	<string name="network_condition_summ">Download happens under the connectivity condition</string>
	<string name="download_interval">Downloading interval</string>
	<string name="download_interval_summ">Frequent of the downloading background service</string>
	<string name="download_thread">Downloading threads</string>
	<string name="download_thread_summ">Number of threads used to download articles</string>
	<string name="cache">Cache</string>
	<string name="image_disk_cache_size">Images disk cache size</string>
	<string name="image_disk_cache_size_summ">Max storage size for images caching</string>

</resources>