<menu xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		tools:context="dh.newspaper.MainActivity" >

	<!--<item
		android:id="@+id/action_example"
		android:showAsAction="withText|ifRoom"
		android:orderInCategory="100"
		android:title="@string/action_example"/>-->

	<item
			android:id="@+id/action_share"
			android:showAsAction="ifRoom"
			android:icon="@drawable/ic_action_share"
			android:title="@string/share"/>
	<item
			android:id="@+id/show_original"
			android:showAsAction="ifRoom"
			android:icon="@drawable/earth_ffffffde"
			android:title="@string/show_original_page"/>
	<item
			android:id="@+id/action_offline"
			android:showAsAction="never"
			android:icon="@drawable/ic_action_airplane_mode_on"
			android:checkable="true"
			android:title="@string/offline"/>
	<item
			android:id="@+id/action_settings"
			android:showAsAction="never"
			android:icon="@drawable/ic_action_settings"
			android:title="@string/action_settings"/>

</menu>
