<menu xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		tools:context="dh.newspaper.MainActivity" >

	<!--
	xmlns:app="http://schemas.android.com/apk/res-auto"
	<item
		android:id="@+id/action_example"
		app:showAsAction="withText|ifRoom"
		android:orderInCategory="100"
		android:title="@string/action_example"/>-->

	<item
			android:id="@+id/action_subscribe"
			android:showAsAction="ifRoom"
			android:icon="@drawable/ic_action_new"
			android:title="@string/subscribe"/>
	<item
			android:id="@+id/action_manage_subscription"
			android:showAsAction="ifRoom"
			android:icon="@drawable/rss_ffffffde"
			android:title="@string/manage_subscriptions"/>
	<item
			android:id="@+id/action_offline"
			android:showAsAction="never"
			android:icon="@drawable/ic_action_airplane_mode_on"
			android:checkable="true"
			android:title="@string/offline"/>
	<item
			android:id="@+id/action_settings"
			android:showAsAction="never"
			android:icon="@drawable/ic_action_settings"
			android:title="@string/action_settings"/>

</menu>
